[project]
name = "langchain-prompt-protection"
version = "1.0.0"
description = """\
An example CLI tool in Python that demonstrates how to integrate Pangea \
services into a LangChain app to capture and filter what users are sending to \
LLMs.\
"""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.1.8",
    "langchain-openai>=0.3.8",
    "langchain>=0.3.20",
    "pangea-sdk>=5.5.1",
    "pydantic>=2.10.6",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
