[project]
name = "langchain-prompt-protection"
version = "1.0.0"
description = """\
An example CLI tool in Python that demonstrates how to integrate Pangea \
services into a LangChain app to capture and filter what users are sending to \
LLMs.\
"""
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.3.0",
    "langchain-openai>=1.0.0",
    "langchain>=1.0.0",
    "pangea-sdk>=6.8.0",
    "pydantic>=2.12.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.18.2",
    "ruff>=0.14.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",

    "I",   # isort
    "PTH", # flake8-use-pathlib
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
